--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoVerificarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoVerificarView.fxml
@@ -118,14 +118,20 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="valorText" prefHeight="40.0" prefWidth="54.0" text="Label">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <HBox prefHeight="41.0" prefWidth="415.0">
+               <children>
+                  <Label fx:id="valorText" prefHeight="45.0" text="Label">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="valorText1" layoutX="10.0" layoutY="10.0" prefHeight="45.0" prefWidth="54.0" text="€">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <VBox fx:id="infoVbox" layoutX="293.0" layoutY="88.0" prefHeight="400.0" prefWidth="160.0">
@@ -178,14 +184,20 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="valor" prefHeight="40.0" text="Extras:">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <HBox prefHeight="42.0" prefWidth="160.0">
+               <children>
+                  <Label fx:id="valor" prefHeight="46.0" prefWidth="40.0" text="Extras:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="valor1" layoutX="10.0" layoutY="10.0" prefHeight="46.0" prefWidth="11.0" text="€">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <HBox alignment="CENTER" layoutX="3.0" layoutY="516.0" prefHeight="68.0" prefWidth="800.0">
