--- a/src/main/resources/com/example/projeto2_desktop/ExtraAdicionarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ExtraAdicionarView.fxml
@@ -26,17 +26,17 @@
             <Font size="21.0" />
          </font>
       </Button>
-      <HBox alignment="BOTTOM_LEFT" layoutX="55.0" layoutY="48.0" prefHeight="38.0" prefWidth="500.0">
+      <HBox alignment="BOTTOM_LEFT" layoutX="55.0" layoutY="50.0" prefHeight="38.0" prefWidth="500.0">
          <children>
             <Label text="Nome">
                <HBox.margin>
-                  <Insets left="70.0" right="30.0" />
+                  <Insets left="75.0" right="30.0" />
                </HBox.margin>
                <font>
                   <Font name="Calibri" size="14.0" />
                </font>
             </Label>
-            <Label text="Preço">
+            <Label text="Preço(€)">
                <HBox.margin>
                   <Insets left="30.0" right="30.0" />
                </HBox.margin>
@@ -44,13 +44,14 @@
                   <Font name="Calibri" size="14.0" />
                </font>
             </Label>
-            <Label text="Preço Total">
+            <Label text="Preço Total(€)">
                <font>
                   <Font name="Calibri" size="14.0" />
-               </font></Label>
-            <Label text="Qtd">
+               </font>
+            </Label>
+            <Label text="Qtd(unidade)">
                <HBox.margin>
-                  <Insets left="80.0" />
+                  <Insets left="35.0" />
                </HBox.margin>
                <font>
                   <Font name="Calibri" size="14.0" />
