--- a/src/main/resources/com/example/projeto2_desktop/PedidoEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/PedidoEditarView.fxml
@@ -102,14 +102,20 @@
                   <Insets bottom="20.0" />
                </VBox.margin>
             </ComboBox>
-            <Label fx:id="valorText" prefHeight="40.0" prefWidth="54.0" text="Label">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <HBox prefHeight="37.0" prefWidth="415.0">
+               <children>
+                  <Label fx:id="valorText" prefHeight="40.0" text="Label">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="valorText1" layoutX="10.0" layoutY="10.0" prefHeight="40.0" prefWidth="54.0" text="€">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <VBox fx:id="infoVbox" alignment="CENTER_LEFT" layoutX="233.0" layoutY="48.0" prefHeight="400.0" prefWidth="160.0">
@@ -154,14 +160,20 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label fx:id="valor" prefHeight="40.0" text="Valor">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <HBox prefHeight="34.0" prefWidth="160.0">
+               <children>
+                  <Label fx:id="valor" prefHeight="40.0" text="Valor">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="valor1" prefHeight="40.0" text="€">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <Button fx:id="alterarButton" layoutX="160.0" layoutY="450.0" mnemonicParsing="false" onAction="#editarPedido" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Editar Pedido">
