--- a/src/main/resources/com/example/projeto2_desktop/PedidoNovoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/PedidoNovoView.fxml
@@ -39,6 +39,7 @@
       <Label fx:id="errorText" layoutX="207.0" layoutY="415.0" prefHeight="18.0" prefWidth="342.0" textFill="#e71010" />
       <ComboBox fx:id="descricaoBox" layoutX="145.0" layoutY="324.0" onAction="#getValue" prefHeight="40.0" prefWidth="255.0" promptText="Descrição:" stylesheets="@../../../CSS/Marine.css" />
       <ComboBox fx:id="oficinaBox" layoutX="145.0" layoutY="211.0" prefHeight="40.0" prefWidth="254.0" promptText="Oficina:" stylesheets="@../../../CSS/Marine.css" />
-      <Label fx:id="valorText" layoutX="205.0" layoutY="391.0" prefHeight="18.0" prefWidth="67.0" />
+      <Label fx:id="valorText" layoutX="205.0" layoutY="391.0" prefHeight="18.0" />
+      <Label fx:id="valorText1" layoutX="215.0" layoutY="391.0" prefHeight="18.0" text="€" />
    </children>
 </AnchorPane>
